# ipu-examples

./: Makefile  Makefile.am  Makefile.am~  Makefile.in  README.md  compile  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  depcomp  install-sh  missing
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
images/: freescale_1024x768_nv12.raw  freescale_1024x768_rgb565.raw  freescale_1024x768_rgba32.raw  freescale_1024x768_yuyv422.raw  stefan_interlaced_320x240_1frame.yv12
mx5/basic/example1/: Makefile  Makefile.in  basic_ex1.h  ipu_test1  ipu_test1.c  ipu_test1.h
mx5/framebuffer/example1/: Makefile  Makefile.am  Makefile.am~  Makefile.in  basic_ex1.c
mx5/framebuffer/example1/.deps/: basic_ex1.Po
mx5/rotation/example1/: Makefile  Makefile.am  Makefile.in  rot_ex1.c  rot_ex1.h
mx5/rotation/example1/.deps/: rot_ex1.Po
mx6/alphablending/example1/: Makefile  Makefile.am  Makefile.in  alpha_ex1.c
mx6/alphablending/example1/.deps/: alpha_ex1.Po
mx6/alphablending/example2/: Makefile  Makefile.am  Makefile.am~  Makefile.in  alpha_ex2.c
mx6/alphablending/example2/.deps/: alpha_ex2.Po
mx6/basic/example1/: Makefile.in  basic_ex1.c
mx6/cropping/example1/: Makefile  Makefile.am  Makefile.am~  Makefile.in  crop_ex1.c
mx6/cropping/example1/.deps/: crop_ex1.Po
mx6/csc/example1/: Makefile  Makefile.am  Makefile.am~  Makefile.in  csc_ex1.c
mx6/csc/example1/.deps/: csc_ex1.Po
mx6/deinterlacing/example1/: Makefile  Makefile.am  Makefile.in  dint_ex1.c
mx6/deinterlacing/example1/.deps/: dint_ex1.Po
mx6/framebuffer/example1/: Makefile  Makefile.am  Makefile.am~  Makefile.in  basic_ex1.c  framebuffer_ex1.c  framebuffer_ex1.h
mx6/framebuffer/example1/.deps/: framebuffer_ex1.Po
mx6/framebuffer/example2/: Makefile.am  Makefile.in  framebuffer_ex2.c  ncurses_cfg.h
mx6/resizing/example1/: Makefile  Makefile.am  Makefile.am~  Makefile.in  res_ex1.c
mx6/resizing/example1/.deps/: res_ex1.Po
mx6/rotation/example1/: Makefile  Makefile.am  Makefile.in  rot_ex1.c  rot_ex1.h
mx6/rotation/example1/.deps/: rot_ex1.Po
