AUTOMAKE_OPTIONS = foreign

if TARGET_MX5
SUBDIRS_MX5 = mx5/basic/example1 \
	mx5/rotation/example1
endif

if TARGET_MX6 
SUBDIRS_MX6 = mx6/basic/example1 \
	mx6/alphablending/example1 \
	mx6/alphablending/example2 \
	mx6/cropping/example1 \
	mx6/csc/example1 \
	mx6/deinterlacing/example1 \
	mx6/resizing/example1 \
	mx6/rotation/example1
endif

SUBDIRS = $(SUBDIRS_MX5) $(SUBDIRS_MX6)

